<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".SecondActivity"
    tools:openDrawer="start">

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/main_content2"/>

    <android.support.design.widget.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginEnd="-65dp"
        android:background="@drawable/menu_bg"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#851B2D"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:padding="15dp"
                        android:src="@drawable/fixture" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/news" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/statistics" />



                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/result" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/go_live" />


                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/share" />

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:padding="15dp"
                        android:src="@drawable/rate_us" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvFixture2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/fixture"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/tvNews2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/news"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/tvStatictics2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/statictics"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />



                    <TextView
                        android:id="@+id/tvResults2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/results"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/tvGoLive2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/go_live"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />


                    <TextView
                        android:id="@+id/tvShare2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/share"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/tvRateUs2"
                        android:layout_width="170dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="3dp"
                        android:background="#191919"
                        android:gravity="center"
                        android:padding="15dp"
                        android:text="@string/rate_us"
                        android:textAllCaps="true"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>